version/0.19/_sources/api/solver/_autosummary/settings/icing.rst.txt
:orphan:

.. _icing:

icing
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.icing.icing
    :show-inheritance:

.. rubric:: Attributes

============================================================   ======================================

Attribute                                                                                     Summary

============================================================   ======================================
:ref:`fensapice_flow_bc_subtype <fensapice_flow_bc_subtype>`       'fensapice_flow_bc_subtype' child.

============================================================   ======================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                   'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_3>`                                   'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                   'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_14>`                                  'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`       'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_19>`                                  'child_object_type' of phase.

====================================================   ===========================================

