version/0.25/_sources/api/solver/_autosummary/settings/icing.rst.txt
:orphan:

.. _icing:

icing
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.icing.icing
    :show-inheritance:

.. rubric:: Attributes

============================================================   =======================

Attribute                                                                      Summary

============================================================   =======================
:ref:`fensapice_flow_bc_subtype <fensapice_flow_bc_subtype>`       Help not available.

:ref:`fensapice_dpm_rh_mode <fensapice_dpm_rh_mode>`               Help not available.

:ref:`fensapice_drop_vrh <fensapice_drop_vrh>`                     Help not available.

:ref:`fensapice_drop_vc <fensapice_drop_vc>`                       Help not available.

============================================================   =======================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                   'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_4>`                                   'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                   'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_16>`                                  'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`       'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_22>`                                  'child_object_type' of phase.

:ref:`phase_child <phase_child_33>`                                  'child_object_type' of phase.

:ref:`phase_child <phase_child_44>`                                  'child_object_type' of phase.

:ref:`phase_child <phase_child_49>`                                  'child_object_type' of phase.

====================================================   ===========================================

